# python_project

./: pyproject.toml
src/real_estate_toolkit/: main.py
src/real_estate_toolkit/agent_based_model/: consumer.py  house.py  house_market.py  simulation.py
src/real_estate_toolkit/analytics/: exploratory.py
src/real_estate_toolkit/data/: cleaner.py  descriptor.py  descriptor_numpy.py  loader.py
src/real_estate_toolkit/m1_models/: predictor.py
